--- a/Main-Style.css
+++ b/Main-Style.css
@@ -14,34 +14,7 @@ font-size: em2;}
 #two {color: silver; 
 font-size: em2;}
 #three {color: brown; 
-font-size: em2;}
-
-#Browser_table { width: 700px; 
-    height: 50px;
-    }
-.Browser {
-    color: white; 
-    background-color: black;
-    text-decoration: none; 
-    font-size: 1.5rem
-    } 
-.Browser:link {
-      color: white;
-      text-decoration: none;
-    }
-.Browser:visited {
-      color: white;
-      text-decoration: none;
-    }
-.Browser:hover {
-      color: white;
-      text-decoration: none;
-    }
-.Browser:active {
-      color: black;
-      text-decoration: none;
-    }  
-
+font-size: em2;} 
 
 
 a:link {
@@ -59,5 +32,40 @@ a:hover {
 a:active {
       color: greenyellow;
       text-decoration: underline;
-    }  
+    } 
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #333;
+  z-index: 1000;
+}
+
+.navbar {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar li {
+  margin: 0;
+}
+
+.navbar a {
+  display: block;
+  padding: 14px 20px;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  transition: background 0.3s, color 0.3s;
+}
+
+.navbar a:hover {
+  background-color: #555;
+  color: yellow;
+}
+
 
